--- a/codes/index.html
+++ b/codes/index.html
@@ -9,5 +9,7 @@
     <h1> Olá, Mundo ! </h1>
     <hr>
     <h2> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis possimus soluta ipsa accusamus rem voluptatibus vel, deleniti provident aspernatur tempore quidem minima vero illo atque molestiae commodi perferendis quam id. </h2>
+    <hr>
+    <h2> Lorem ipsum - teste </h2>
 </body>
 </html>
